--- a/Employee-Management-API/src/main/resources/application.properties
+++ b/Employee-Management-API/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-spring.application.name=EM-API
-server.port = 8181
+spring.application.name=Employee-Management-API
 
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_data
+spring.datasource.url=jdbc:mysql://localhost:3306/contact_manager_data
 spring.datasource.username=root
-spring.datasource.password=ankit20224
+spring.datasource.password=root20224
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
