--- a/Employee-Management-API/.gitignore
+++ b/Employee-Management-API/.gitignore
@@ -1,16 +1,3 @@
-HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
 # === Java/Maven General Ignore ===
 
 # Compiled class files
@@ -56,6 +43,7 @@ Thumbs.db
 
 # === Environment & Secrets ===
 .env
+application.properties
 application-dev.properties
 application-test.properties
 application-prod.properties
@@ -65,24 +53,3 @@ application-prod.properties
 *.tmp
 *.bak
 *.old
-
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
