--- a/Employee-Management-API/.gitignore
+++ b/Employee-Management-API/.gitignore
@@ -3,24 +3,39 @@
 *.jar
 *.war
 *.ear
-*.log
-hs_err_pid*
-replay_pid*
 
-# IntelliJ / Eclipse / VSCode IDEs
+### Logs ###
+*.log
+logs/
+*.out
+
+### Build outputs ###
+/target/
+build/
+
+### IDEs ###
+# IntelliJ
 .idea/
 *.iml
-*.ipr
-*.iws
-*.classpath
-*.project
+
+# Eclipse
+.classpath
+.project
 .settings/
+
+# VS Code
 .vscode/
 
-# OS-specific files
+### OS-specific ###
 .DS_Store
 Thumbs.db
 
+### Spring Boot config ###
+# Sensitive application files (optional, if contains secrets)
+src/main/resources/application.properties
+src/main/resources/application.yml
+src/main/resources/application-*.properties
+src/main/resources/application-*.yml
 
 ### Maven ###
 .mvn/
@@ -29,35 +44,23 @@ Thumbs.db
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
-pom.xml.next
 release.properties
 
-### Gradle ###
+### Gradle (if used) ###
 .gradle/
 build/
 !gradle-wrapper.jar
 !**/gradlew
 !**/gradlew.bat
 
-### Logs ###
-*.log
-logs/
-*.out
-
 ### Testing ###
 test-output/
 surefire-reports/
 .jacoco/
 
-# Generated files
+### Temp & Backup ###
 *.swp
 *.swo
 *.bak
 *.tmp
 *.orig
-
-# Ignore the sensitive application.properties file
-src/main/resources/application.properties
-
-# Ignore the entire target build directory
-/target/
